[project]
name = "ipv6stats"
version = "1.0.0"
description = "IPv6 Statistics Dashboard - High-performance Streamlit app for global IPv6 adoption metrics"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
    "requests>=2.32.4",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["pages*"]
exclude = ["img*", "venv*", "*.egg-info*"]
